# mbed-cloud-client-example-porting-on-esp32

./: CMakeLists.txt  Makefile  README.md  component.mk
components/: CMakeLists.txt  component.mk
components/delta-tool/: component.mk
components/delta-tool/bsdiff/: tags
components/mbed-cloud-client/: CMakeLists.txt  Makefile  component.mk
components/mbed-cloud-client/factory-configurator-client/: Makefile  tags
components/mbed-cloud-client/mbed-client-pal/: CMakeLists.txt  Makefile  tags
components/mbed-cloud-client/mbed-client-pal/Source/: CMakeLists.txt
components/mbed-cloud-client/mbed-client-pal/Source/PAL-Impl/Services-API/: pal_configuration.h
components/mbed-cloud-client/mbed-client-pal/Test/: Makefile  tags
components/mbed-cloud-client/mbed-client-pal/Test/Unity/: Makefile  tags
components/mbed-cloud-client/mbed-client/mbed-client/: component.mk  m2mresource.h
components/mbed-cloud-client/mbed-cloud-client/: MbedCloudClientConfigCheck.h
components/mbed-cloud-client/ns-hal-pal/: ns_event_loop.c
components/mbed-cloud-client/source/: CMakeLists.txt  component.mk
components/mbed-cloud-client/update-client-hub/: tags
components/pal-platform/: component.mk
components/source/: CMakeLists.txt  component.mk  resource.cpp  resource.h  simplem2mclient.h
components/source/platform/FreeRTOS/: mcc_common_setup.cpp.bak
main/: CMakeLists.txt  component.mk  main.cpp
